--- a/press/index.html
+++ b/press/index.html
@@ -38,7 +38,8 @@
 
                 <ul>
                     <li>Play endless pinball! Keep scrolling up to new levels until you run out of lives.</li>
-                    <li>Collect coins and rubies on each level and earn high scores to unlock new characters.</li>
+                    <li>Collect rubies and earn high scores to unlock new characters.</li>
+                    <li>Earn coins to play the crane game for a chance to win a new character.</li>
                     <li>Randomly generated levels with progressively more difficult obstacles to avoid.</li>
                     <li>There will be 50+ adorable, slightly random, or truly horrifying characters at release, with more added in future updates.</li>
                     <li>Hourly and daily challenges for bonus coins.</li>
@@ -53,13 +54,13 @@
                 <p>
                     Pinny McBallface is <em>free</em> and ad-supported. A single
                     in-app purchase will disable ads forever and double the
-                    value of coins.
+                    value of coins. Any character can be unlocked for $0.99.
                 </p>
 
                 <h3>Release Date</h3>
                 <ul>
-                    <li><b>Android:</b> February 2017</li>
-                    <li><b>iOS:</b> March 2017</li>
+                    <li><b>Android:</b> March 2017</li>
+                    <li><b>iOS:</b> April 2017</li>
                 </ul>
 
                 <h3>Gameplay Video</h3>
@@ -77,6 +78,8 @@
                     <div class="col-sm-3"><a href="screen6.png"><img src="screen6.png" class="img img-responsive"/></a></div>
                     <div class="col-sm-3"><a href="screen7.png"><img src="screen7.png" class="img img-responsive"/></a></div>
                     <div class="col-sm-3"><a href="screen8.png"><img src="screen8.png" class="img img-responsive"/></a></div>
+                    <div class="col-sm-3"><a href="screen9.png"><img src="screen9.png" class="img img-responsive"/></a></div>
+                    <div class="col-sm-3"><a href="screen10.png"><img src="screen10.png" class="img img-responsive"/></a></div>
                 </div>
 
                 <h3>Icon</h3>
