--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="header-content-inner">
                         <img src="img/logo.png" class="img img-responsive" name="Pinny McBallface logo"/>
                         <h1>Endless pinball! Play for free!</h1>
-                        <h1>(Coming soon)</h1>
+                        <h1>(Coming soon | <a href="/press/">press</a>)</h1>
                         <div class="badges">
                             <!--div class="col-xs-6"><a class="badge-link" href="https://play.google.com/store/apps/details?id=com.mousemob.pinny">
                                 <img class="img img-responsive" src="img/google-play-badge.png" alt="Android Google Play"/>
