--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <div class="header-content-inner">
                         <img src="img/logo.png" class="img img-responsive" name="Pinny McBallface logo"/>
                         <h1>Endless pinball! Play for free!</h1>
-                        <h1>(Coming soon | <a href="/press/">press</a>)</h1>
+                        <h2><a href="/press/">[press]</a></h2>
                         <div class="badges">
-                            <!--div class="col-xs-6"><a class="badge-link" href="https://play.google.com/store/apps/details?id=com.mousemob.pinny">
+                            <div class="col-xs-6"><a class="badge-link" href="https://play.google.com/store/apps/details?id=com.mousemob.pinny">
                                 <img class="img img-responsive" src="img/google-play-badge.png" alt="Android Google Play"/>
-                            </a></div-->
+                            </a></div>
                             <!--div class="col-xs-6"><a class="badge-link" href="#">
                                 <img class="img img-responsive" src="img/app-store-badge.png" alt="iOS App Store"/>
                             </a></div-->
