--- a/press/index.html
+++ b/press/index.html
@@ -65,7 +65,7 @@
 
                 <h3>Gameplay Video</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1GJ7QlpX6sI" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmIbfJOOP1c" frameborder="0" allowfullscreen></iframe>
 
                 <h3>Screenshots</h3>
 
