--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                             <div class="col-xs-6"><a class="badge-link" href="https://play.google.com/store/apps/details?id=com.mousemob.pinny">
                                 <img class="img img-responsive" src="img/google-play-badge.png" alt="Android Google Play"/>
                             </a></div>
+
+                            <div class="col-xs-2"><a class="badge-link" href="http://kongregate.com/games/mousemob/pinny-mcballface-pinball">
+                                <img class="img img-responsive" src="img/kongregate_anthill.png" alt="Kongregate - Web, HTML5"/>
+                            </a></div>
+
                             <!--div class="col-xs-6"><a class="badge-link" href="#">
                                 <img class="img img-responsive" src="img/app-store-badge.png" alt="iOS App Store"/>
                             </a></div-->
